src/main/javacc/Parser.jj
options {
    STATIC = false;
    LOOKAHEAD = 1;
    DEBUG_PARSER = true;
}

PARSER_BEGIN(Parser)
package org.example.generatedClasses;
import java.util.*;
import org.example.commands.*;
import org.example.helpers.*;

public class Parser {
    public Command parse(String input) throws ParseException {
        ReInit(new java.io.StringReader(input));
        return statement();
    }
    public Parser(){
    }
}

PARSER_END(Parser)


TOKEN : {
    < FILTRER: "FILTRER" > |
    < CHOISIR: "CHOISIR" > |
    < CALCULER: "CALCULER" > |
    < GROUPER: "GROUPER" > |
    < MOYENNE: "MOYENNE" > |
     < CHARGER: "CHARGER" > |
     < AFFICHER: "AFFICHER"> |
    < PAR : "PAR"> |
    < MAX: "MAX" > |
    < MIN: "MIN" > |
    < SOMME : "SOMME"> |
    < IDENTIFIER: (<LETTER> (<LETTER>|<DIGIT>|"_")*) > |
    < NUMBER: (<DIGIT>)+ > |
    < STRING: "\"" (~["\""])* "\"" > |
    < WHITESPACE: [" ", "\t", "\n", "\r"] > |
    <EQ : "="> |
    <NEQ : "!="> |
    <GT : ">"> |
    <LT : "<"> |
    <GTE : ">="> |
    <LTE : "<="> |
    <COMMA : ","> |
    <LPAREN : "("> |
    <RPAREN : ")"> |
    <SEMICOLON : ";">

}

SKIP : {
    < WHITESPACE >
}

MORE : {
    < #LETTER: ["a"-"z", "A"-"Z"] >
    | < #DIGIT: ["0"-"9"] >
}


Command statement() :
{ Command cmd; }
{
    ( cmd = filter_statement()
    | cmd = choose_statement()
    | cmd = calculate_statement()
    | cmd = group_statement()
    | cmd = charger_statement()
    | cmd = afficher_statement()
    )
    { return cmd; }
}


ChargeCommand charger_statement() :
{ Token t;}
{
    <CHARGER> "(" t = <STRING> ")" {return new ChargeCommand(t.image.replaceAll("\"", ""));}
}
DisplayCommand afficher_statement() :
{  }
{
    <AFFICHER>  {return new DisplayCommand();}
}

FilterCommand filter_statement() :
{ Condition condition; }
{
    <FILTRER> "(" condition=condition() ")"
    { return new FilterCommand(condition); }
}


SelectCommand choose_statement() :
{ Columns columns; }
{
    <CHOISIR> "(" columns=column_list() ")"
    { return new SelectCommand(columns); }
}


CalculateCommand calculate_statement() :
{ Aggregation aggregation; String columnName; String aggregationType; }
{
    <CALCULER> "(" (aggregationType = <MOYENNE> { } | aggregationType = <MAX> { } | aggregationType = <MIN> { }) "(" columnName = column() ")" ")"
     { return new CalculateCommand(new Aggregation(columnName,aggregationType)); }
}

GroupCommand group_statement() :
{ Columns groupColumns; Aggregation aggregation = null; String aggregationType; String aggregationColumn;}
{
     <GROUPER> "(" groupColumns=column_list()
     [<PAR> "(" (aggregationType = <MOYENNE> { } | aggregationType = <MAX> { } | aggregationType = <MIN> { }) "(" aggregationColumn = column() ")"  ")"
       {
          aggregation = new Aggregation(aggregationColumn, aggregationType);
       }
     ]
      ")"
    { return new GroupCommand(groupColumns, aggregation); }
}

Columns column_list() :
{ List<String> columns = new ArrayList<>(); String col;}
{
    col = column() { columns.add(col);} ( "," col = column() { columns.add(col); } )*
    { return new Columns(columns); }
}

String column() :
{ Token t;}
{
    t=<IDENTIFIER> { return t.image; }
}

Condition condition() :
{ String column; String operator; String value; }
{
    column = column() operator=operator() value=value()
    { return new Condition(column, operator, value); }
}

String operator() :
{ Token t;}
{
    t= <EQ> | <NEQ> | <LT> | <GT> | <LTE> | <GTE>  { return t.image; }
}

String value() :
{ Token t; }
{
    t= <NUMBER> | <STRING>  { return t.image; }
}
